--- a/branches/wmv0800/Source/ui/WoWDirManager.ui
+++ b/branches/wmv0800/Source/ui/WoWDirManager.ui
@@ -6,8 +6,8 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>459</width>
-    <height>359</height>
+    <width>456</width>
+    <height>356</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -72,7 +72,7 @@
    <property name="geometry">
     <rect>
      <x>370</x>
-     <y>70</y>
+     <y>160</y>
      <width>81</width>
      <height>21</height>
     </rect>
@@ -85,7 +85,7 @@
    <property name="geometry">
     <rect>
      <x>370</x>
-     <y>135</y>
+     <y>95</y>
      <width>81</width>
      <height>20</height>
     </rect>
@@ -98,7 +98,7 @@
    <property name="geometry">
     <rect>
      <x>370</x>
-     <y>160</y>
+     <y>120</y>
      <width>81</width>
      <height>20</height>
     </rect>
@@ -127,7 +127,7 @@
    <property name="geometry">
     <rect>
      <x>370</x>
-     <y>95</y>
+     <y>185</y>
      <width>81</width>
      <height>21</height>
     </rect>
@@ -136,16 +136,33 @@
     <string>Delete All</string>
    </property>
   </widget>
+  <widget class="QPushButton" name="WoWTypeButton">
+   <property name="geometry">
+    <rect>
+     <x>370</x>
+     <y>55</y>
+     <width>81</width>
+     <height>21</height>
+    </rect>
+   </property>
+   <property name="text">
+    <string>WoW Type</string>
+   </property>
+   <property name="checkable">
+    <bool>false</bool>
+   </property>
+  </widget>
  </widget>
  <tabstops>
+  <tabstop>WDM_List</tabstop>
   <tabstop>WDM_bDirAdd</tabstop>
   <tabstop>WDM_bDirEdit</tabstop>
-  <tabstop>WDM_bDirDelete</tabstop>
-  <tabstop>WDM_bDirDeleteAll</tabstop>
+  <tabstop>WoWTypeButton</tabstop>
   <tabstop>WDM_bDirUp</tabstop>
   <tabstop>WDM_bDirDown</tabstop>
+  <tabstop>WDM_bDirDelete</tabstop>
+  <tabstop>WDM_bDirDeleteAll</tabstop>
   <tabstop>buttonBox</tabstop>
-  <tabstop>WDM_List</tabstop>
  </tabstops>
  <resources>
   <include location="../resources.qrc"/>
