WMV v0.8.0.0 -Added QsLog as Logging system. -Added a lot of Logging messages. -Finished & tested preliminary MPQ reading functionality. Extensive & unusual testing still needed. -Configured StormLib projects for VS2008 and VS2010. -Replaced _MAC_PPC and _MAC_INTEL configurations with _MAC32 and _MAC64 configurations. * WoW Directory Manager (WDM)  -Now properly reads patched TOC files for WoW Version.  -WDM now reads and saves added directories.  -The list now displays data, however the data does not yet display properly.  -WDM now remembers the last WoW directory you added, and will start there the next time you add a directory!

--- a/Source/ui/About.ui
+++ b/Source/ui/About.ui
@@ -214,7 +214,7 @@ With Special Thanks to:
     </font>
    </property>
    <property name="text">
-    <string notr="true" extracomment="Version &amp; Release numbers. These are set directly, and will not be translated.">v0.8.0.0 r610</string>
+    <string notr="true" extracomment="Version &amp; Release numbers. These are set directly, and will not be translated.">%1 %2</string>
    </property>
    <property name="scaledContents">
     <bool>false</bool>
@@ -246,7 +246,7 @@ With Special Thanks to:
     </font>
    </property>
    <property name="text">
-    <string comment="About_Edition" extracomment="%1 = SYSTEMVERSION and DEBUGVERSION">%1 Edition</string>
+    <string comment="About_Edition" extracomment="%1 = SYSTEMVERSION %2 = DEBUGVERSION">%1%2 Edition</string>
    </property>
    <property name="scaledContents">
     <bool>false</bool>
