--- a/branches/wmv0800/Source/ui/WoWDirManager.ui
+++ b/branches/wmv0800/Source/ui/WoWDirManager.ui
@@ -39,7 +39,7 @@
     <set>QDialogButtonBox::Close</set>
    </property>
   </widget>
-  <widget class="QTableView" name="WDM_List">
+  <widget class="QListWidget" name="WDM_List">
    <property name="geometry">
     <rect>
      <x>5</x>
@@ -50,6 +50,27 @@
    </property>
    <property name="horizontalScrollBarPolicy">
     <enum>Qt::ScrollBarAsNeeded</enum>
+   </property>
+   <property name="editTriggers">
+    <set>QAbstractItemView::NoEditTriggers</set>
+   </property>
+   <property name="showDropIndicator" stdset="0">
+    <bool>false</bool>
+   </property>
+   <property name="alternatingRowColors">
+    <bool>true</bool>
+   </property>
+   <property name="iconSize">
+    <size>
+     <width>24</width>
+     <height>24</height>
+    </size>
+   </property>
+   <property name="viewMode">
+    <enum>QListView::ListMode</enum>
+   </property>
+   <property name="uniformItemSizes">
+    <bool>false</bool>
    </property>
   </widget>
   <widget class="QPushButton" name="WDM_bDirAdd">
