--- a/Source/ui/Main_Window_Viewer.ui
+++ b/Source/ui/Main_Window_Viewer.ui
@@ -221,13 +221,6 @@
      </property>
      <addaction name="actionManage_Directories"/>
      <addaction name="separator"/>
-     <addaction name="actionPath_To_WoW_Dirs"/>
-     <addaction name="actionWoWDir_Vanilla"/>
-     <addaction name="actionWoWDir_BC"/>
-     <addaction name="actionWoWDir_WotLK"/>
-     <addaction name="actionWoWDir_Cataclysm"/>
-     <addaction name="actionWoWDir_PTR"/>
-     <addaction name="actionOther_installs"/>
     </widget>
     <addaction name="menuChange_Modes"/>
     <addaction name="menuChange_WoW_Directory"/>
@@ -1055,6 +1048,9 @@ alternate-background-color: rgb(229, 228, 242);</string>
   <action name="actionView_Log">
    <property name="text">
     <string>&amp;View Log...</string>
+   </property>
+   <property name="shortcut">
+    <string>Ctrl+L</string>
    </property>
   </action>
   <action name="actionSave_File">
