--- a/branches/wmv0800/Source/ui/About.ui
+++ b/branches/wmv0800/Source/ui/About.ui
@@ -114,7 +114,7 @@ border-color: rgb(0, 0, 0);</string>
      </rect>
     </property>
     <property name="text">
-     <string comment="About_DevNames">Kjasi, Jeromnimo</string>
+     <string notr="true">Kjasi, Jeromnimo</string>
     </property>
     <property name="alignment">
      <set>Qt::AlignLeading|Qt::AlignLeft|Qt::AlignTop</set>
@@ -151,14 +151,49 @@ border-color: rgb(0, 0, 0);</string>
       <x>10</x>
       <y>15</y>
       <width>246</width>
-      <height>56</height>
+      <height>21</height>
      </rect>
     </property>
     <property name="text">
-     <string comment="About_OriginalDevNames"> Ufo_Z, Darjk, Chuanhsing, Kjasi, Tob.Franke
-
-With Special Thanks to: 
-     Linghuye, nSzAbolcs, Sailesh, Terran &amp; Cryect</string>
+     <string notr="true" comment="Original Dev Names"> Ufo_Z, Darjk, Chuanhsing, Kjasi, Tob.Franke</string>
+    </property>
+    <property name="alignment">
+     <set>Qt::AlignLeading|Qt::AlignLeft|Qt::AlignTop</set>
+    </property>
+    <property name="textInteractionFlags">
+     <set>Qt::NoTextInteraction</set>
+    </property>
+   </widget>
+   <widget class="QLabel" name="OldDevelopers_2">
+    <property name="geometry">
+     <rect>
+      <x>5</x>
+      <y>40</y>
+      <width>246</width>
+      <height>16</height>
+     </rect>
+    </property>
+    <property name="text">
+     <string comment="Special Thanks To...">With Special Thanks to:</string>
+    </property>
+    <property name="alignment">
+     <set>Qt::AlignLeading|Qt::AlignLeft|Qt::AlignTop</set>
+    </property>
+    <property name="textInteractionFlags">
+     <set>Qt::NoTextInteraction</set>
+    </property>
+   </widget>
+   <widget class="QLabel" name="OldDevelopers_3">
+    <property name="geometry">
+     <rect>
+      <x>10</x>
+      <y>55</y>
+      <width>246</width>
+      <height>21</height>
+     </rect>
+    </property>
+    <property name="text">
+     <string notr="true" comment="Special Thanks Names">Linghuye, nSzAbolcs, Sailesh, Terran &amp; Cryect</string>
     </property>
     <property name="alignment">
      <set>Qt::AlignLeading|Qt::AlignLeft|Qt::AlignTop</set>
@@ -438,7 +473,7 @@ p, li { white-space: pre-wrap; }
     </rect>
    </property>
    <property name="text">
-    <string comment="About_ContentCopyright" extracomment="%1 is the current year">All game assets and content are ©2004-%1 Blizzard Entertainment®. All rights reserved.</string>
+    <string comment="About_ContentCopyright" extracomment="%1 is the current year, and is set by the program">All game assets and content are ©2004-%1 Blizzard Entertainment®. All rights reserved.</string>
    </property>
    <property name="scaledContents">
     <bool>false</bool>
