--- a/branches/wmv0800/Source/ui/WoWDirManager.ui
+++ b/branches/wmv0800/Source/ui/WoWDirManager.ui
@@ -77,7 +77,7 @@
    <property name="geometry">
     <rect>
      <x>370</x>
-     <y>5</y>
+     <y>60</y>
      <width>81</width>
      <height>21</height>
     </rect>
@@ -93,7 +93,7 @@
    <property name="geometry">
     <rect>
      <x>370</x>
-     <y>160</y>
+     <y>190</y>
      <width>81</width>
      <height>21</height>
     </rect>
@@ -106,7 +106,7 @@
    <property name="geometry">
     <rect>
      <x>370</x>
-     <y>95</y>
+     <y>125</y>
      <width>81</width>
      <height>20</height>
     </rect>
@@ -119,7 +119,7 @@
    <property name="geometry">
     <rect>
      <x>370</x>
-     <y>120</y>
+     <y>150</y>
      <width>81</width>
      <height>20</height>
     </rect>
@@ -132,7 +132,7 @@
    <property name="geometry">
     <rect>
      <x>370</x>
-     <y>30</y>
+     <y>85</y>
      <width>81</width>
      <height>21</height>
     </rect>
@@ -140,15 +140,12 @@
    <property name="text">
     <string>Edit</string>
    </property>
-   <property name="default">
-    <bool>true</bool>
-   </property>
   </widget>
   <widget class="QPushButton" name="WDM_bDirDeleteAll">
    <property name="geometry">
     <rect>
      <x>370</x>
-     <y>185</y>
+     <y>215</y>
      <width>81</width>
      <height>21</height>
     </rect>
@@ -157,20 +154,21 @@
     <string>Delete All</string>
    </property>
   </widget>
-  <widget class="QPushButton" name="WoWTypeButton">
+  <widget class="QPushButton" name="WDM_bDirMakeCurrent">
    <property name="geometry">
     <rect>
      <x>370</x>
-     <y>55</y>
+     <y>5</y>
      <width>81</width>
-     <height>21</height>
+     <height>41</height>
     </rect>
    </property>
    <property name="text">
-    <string>WoW Type</string>
+    <string>Set as Current
+Directory</string>
    </property>
-   <property name="checkable">
-    <bool>false</bool>
+   <property name="default">
+    <bool>true</bool>
    </property>
   </widget>
  </widget>
@@ -178,7 +176,6 @@
   <tabstop>WDM_List</tabstop>
   <tabstop>WDM_bDirAdd</tabstop>
   <tabstop>WDM_bDirEdit</tabstop>
-  <tabstop>WoWTypeButton</tabstop>
   <tabstop>WDM_bDirUp</tabstop>
   <tabstop>WDM_bDirDown</tabstop>
   <tabstop>WDM_bDirDelete</tabstop>
