r642 WMV-78 (Plugin Edition) -Created Foundation.Lib project. All commonly used functions (such as logging) will go in here. -Reverted several QsLog changes that prevented WMV from being compiled. !Known Bug: QsLog does not work across DLLs. Need help to fix this! -Added TOC data pertaining to Pre-1.3 Vanilla WoW. -Added many more definitions to the ExporterCanDo class. Since we have yet to start on exporters, MODELEXPORTERHEADERVERSION was unchanged. -Replaced the Platform-Specific icons in the Qt Resource file with PNG versions. Platform-Specific icon files are still available for implementation as the application icon. -Added the About Plugins window. Not yet fully functional. (Need to get a working plugin to fully test it.)

--- a/Source/CommonWindows/UI/WoWDirManager.ui
+++ b/Source/CommonWindows/UI/WoWDirManager.ui
@@ -15,7 +15,7 @@
   </property>
   <property name="windowIcon">
    <iconset resource="../../Application/resources.qrc">
-    <normaloff>:/WoW Versions/WoWIcon1-Vanilla</normaloff>:/WoW Versions/WoWIcon1-Vanilla</iconset>
+    <normaloff>:/WoW Versions/WoWIcon01-Vanilla</normaloff>:/WoW Versions/WoWIcon01-Vanilla</iconset>
   </property>
   <property name="sizeGripEnabled">
    <bool>false</bool>
@@ -155,7 +155,7 @@ Directory</string>
     <bool>true</bool>
    </property>
   </widget>
-  <widget class="QWidget" name="">
+  <widget class="QWidget" name="layoutWidget">
    <property name="geometry">
     <rect>
      <x>370</x>
