--- a/branches/wmv0800_Plugin/Source/CommonWindows/UI/About.ui
+++ b/branches/wmv0800_Plugin/Source/CommonWindows/UI/About.ui
@@ -36,7 +36,7 @@
   </property>
   <property name="windowIcon">
    <iconset resource="../../Application/resources.qrc">
-    <normaloff>:/WMV_Win</normaloff>:/WMV_Win</iconset>
+    <normaloff>:/WMVIcon</normaloff>:/WMVIcon</iconset>
   </property>
   <property name="sizeGripEnabled">
    <bool>false</bool>
