WMV-78: v0800 Plugin Edition -Started Custom WMV format specification. -Minor plugin updates. Still does not load Plugins... -Removed post-build commands that copied the LIB files into the output directory. -BUILDVERSION is now the Build's name. (Currently "Tofu".) -Shrank the Math files by replacing spaces with tabs. -Spelling Fixes

--- a/Source/CommonWindows/UI/About.ui
+++ b/Source/CommonWindows/UI/About.ui
@@ -155,7 +155,7 @@ border-color: rgb(0, 0, 0);</string>
      </rect>
     </property>
     <property name="text">
-     <string notr="true" comment="Original Dev Names"> Ufo_Z, Darjk, Chuanhsing, Kjasi, Tob.Franke</string>
+     <string notr="true" comment="Original Dev Names"> Ufo_Z, Darjk, Chuanhsing, Kjasi, Tob.Franke, Jeromnimo</string>
     </property>
     <property name="alignment">
      <set>Qt::AlignLeading|Qt::AlignLeft|Qt::AlignTop</set>
